kubernetes/system/rabbitmq/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels: {app: rabbitmq}
spec:
  clusterIP: None
  selector: {app: rabbitmq}
  ports:
    - {name: amqp, port: 5672, targetPort: amqp}
    - {name: management, port: 15672, targetPort: management}
    - {name: prometheus, port: 15692, targetPort: prometheus}
