kubernetes/system/rabbitmq/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-default-deny
  annotations: {argocd.argoproj.io/sync-wave: "1"}
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
